fixing wrapping issue on dijit nowrap tab strips

--- a/gooey-cms/gooeycms.control.webrole/css/admin-theme.css
+++ b/gooey-cms/gooeycms.control.webrole/css/admin-theme.css
@@ -414,3 +414,7 @@ ul.flat li {
 /************************************************
 	(5) HACKS
 *************************************************/
+body #main .nowrapTabStrip {
+     width: auto !important;
+     max-width: 924px;
+}
